--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    <!-- site metas -->
-   <title>webwing</title>
+   <title>ANDELE</title>
    <meta name="keywords" content="">
    <meta name="description" content="">
    <meta name="author" content="">
@@ -84,15 +84,16 @@
                <div class="row d_flex">
                   <div class="col-md-4 col-sm-4 d_none">
                      <ul class="conta_icon">
-                        <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Call Us : +01 1234567890</a> </li>
+                        <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Call Us : +233 55-984-6211</a> </li>
                      </ul>
                   </div>
                   <div class="col-md-4 col-sm-4 ">
-                     <a class="logo" href="#"><img src="images/logo.png" alt="#" /></a>
+                     <!---I'll change the logo "WEBVIEWING" to ANDELE LOGO--->
+                     <a class="logo" href="#"><img src="images/logo.png" alt="#" /></a> 
                   </div>
                   <div class="col-md-4 col-sm-4 d_none">
                      <ul class="conta_icon ">
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> demo@gmail.com</a> </li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> salamigideon01@gmail.com</a> </li>
                      </ul>
                   </div>
                </div>
@@ -149,14 +150,17 @@
          <div class="row">
             <div class="col-md-7 col-lg-7">
                <div class="text-bg">
-                  <h1>Trusted and <br>Professional Advisers</h1>
+                  <h1>Realtime Credit<br> Risk Management</h1>
                   <span>for your Business</span>
-                  <p>Showcase your Profile to the world using online CV builder and Get Hired Faster</p>
+                  <p>Perform risk assessments and analysis on companies' finances and make
+                     data-driven decisons to improve our financing activities and maximize results.
+                  </p>
                   <a href="#">About us</a>
                </div>
             </div>
             <div class="col-md-5 col-lg-5">
                <div class="ban_img">
+                  <!---We'll change the logo to something banking or credit-->>
                   <figure><img src="images/ba_ing.png" alt="#" /></figure>
                </div>
             </div>
@@ -171,17 +175,18 @@
             <div class="col-md-12 col-lg-7">
                <div class="about_box">
                   <div class="titlepage">
-                     <h2><strong class="yellow">About US</strong><br> WE CAN HELP YOUR business GROW</h2>
+                     <h2><strong class="yellow">About US</strong><br> ANDELE</h2>
                   </div>
                   <h3>EVERYTHING YOU NEED IN ONE SOLUTION</h3>
-                  <span>HELP YOUR NEXT CAREER MOVE MORE SMOOTHER AND <br> MORE EFFICIENT</span>
-                  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of usingt</p>
-                  <span class="try">TRY ONLINE CV BUILDER FOR Free</span>
-                  <a class="read_morea" href="#">Get Started <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                  <p>We're a team of developers from Ghana.
+                     The term ANDELE is an amalgamation of two words AND and ELE which means to connect everyone. As a team, we aim at becoming the bridge between financial institutions and their customers through the development of technologies.</p>
+                  <span class="try">CONNECT WITH OUR TEAM</span>
+                  <a class="read_morea" href="#">CONNECT<i class="fa fa-angle-right" aria-hidden="true"></i></a>
                </div>
             </div>
             <div class="col-md-12 col-lg-5">
                <div class="about_img">
+                  <!---Image would be replaced with team ANDELE-->>
                   <figure><img src="images/about_img2.jpg" alt="#" /></figure>
                </div>
             </div>
