--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
             </div>
             <div class="col-md-5 col-lg-5">
                <div class="ban_img">
-                  <!---We'll change the logo to something banking or credit-->>
-                  <figure><img src="images/ba_ing.png" alt="#" /></figure>
+                  <!---We'll change the logo to something banking or credit-->
+                  <figure><img src="images/bas_ing.png" alt="#" /></figure>
                </div>
             </div>
          </div>
@@ -186,8 +186,8 @@
             </div>
             <div class="col-md-12 col-lg-5">
                <div class="about_img">
-                  <!---Image would be replaced with team ANDELE-->>
-                  <figure><img src="images/about_img2.jpg" alt="#" /></figure>
+                  <!---Image would be replaced with team ANDELE-->
+                  <figure><img src="images/bas_ing.png" alt="#" /></figure>
                </div>
             </div>
          </div>
@@ -200,51 +200,51 @@
          <div class="row">
             <div class="col-md-7">
                <div class="titlepage">
-                  <h2><strong class="yellow">service</strong><br> WE CAN HELP YOUR business GROW</h2>
+                  <h2><strong class="yellow">service</strong><br> OUR RISK SCORE ALGORITHM</h2>
                </div>
             </div>
          </div>
          <div class="row">
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                  <img src="images/service_icon1.png" alt="#" />
-                  <h3>DIGITAL marketing</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                  <img src="images/service_icon6.png" alt="#" />
+                  <h3>Smart contract</h3>
+                  <p>An automated transaction protocol that records all legally significant events and acts that take place in accordance with a contract or other agreement, </p>
                </div>
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
                   <img src="images/service_icon2.png" alt="#" />
-                  <h3>FINANCIAL PLANING</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                  <h3>Credit Risk</h3>
+                  <p>Understanding the sufficiency of a bank's capital and loan loss reserves at any one time which aims to reduce losses., </p>
                </div>
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                  <img src="images/service_icon3.png" alt="#" />
-                  <h3>DIGITAL marketing</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                  <img src="images/service_icon1.png" alt="#" />
+                  <h3>Blockchain Database</h3>
+                  <p>A shared, unchangeable ledger that makes it easier to track assets and record transactions in a business network, </p>
                </div>
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
                   <img src="images/service_icon4.png" alt="#" />
-                  <h3>BUSINESS CONSULTING</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                  <h3>BUSINESS RISK Management</h3>
+                  <p>A subset of risk management that assesses, prioritizes, and deals with the risks associated with any changes to your company's systems, procedures, and business operations., </p>
                </div>
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
                   <img src="images/service_icon5.png" alt="#" />
-                  <h3>MARKETING RESEARCH</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                  <h3>Financial Planning</h3>
+                  <p>Serving as a consultant to others in the execution of advise for the selectionof financial instruments to satisfy risk management goals, </p>
                </div>
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                  <img src="images/service_icon6.png" alt="#" />
-                  <h3>UX RESEARCH</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                  <img src="images/service_icon3.png" alt="#" />
+                  <h3>Risk analysis</h3>
+                  <p>Locating and evaluating any problems that might have a detrimental effect on important corporate projects. It is done in order to help organizations avoid or mitigate those risks. , </p>
                </div>
             </div>
             <div class="col-md-12">
@@ -261,9 +261,10 @@
          <div class="row">
             <div class="col-md-12 ">
                <div class="titlepage">
-                  <h2><strong class="yellow">PORTFOLIO</strong><br> CHOOSE A PROFESSIONAL DESIGN</h2>
-                  <span>Websites</span>
-                  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distrib</p>
+                  <h2><strong class="yellow">EMPOWER YOUR FINANCIAL DECISIONS</strong><br> RISK ASSESSMENTS</h2>
+                  <span>Secured Credit Risk Algorithm</span>
+                  <p>Blockchain technology will transform business models from a human-based trust model to an algorithm-based trust model, which might expose firms to risks that they have not encountered before.
+                  </p>
                </div>
             </div>
          </div>
@@ -414,60 +415,14 @@
       </div>
    </div>
    <!-- end portfolio section -->
-   <!-- business  section -->
-   <div class="business">
-      <div class="container">
-         <div class="row">
-            <div class="col-md-7">
-               <div class="titlepage">
-                  <h2><strong class="yellow">CREATE</strong><br>PERSONALISED Business</h2>
-                  <p>ss normal distribution of letters, as opposed to using </p>
-               </div>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-md-3 col-sm-6">
-               <div id="ho_color" class="business_box">
-                  <i><img src="images/business_icon1.png" alt="#" /></i>
-                  <h3>23</h3>
-                  <p>NOMINATIONS </p>
-               </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-               <div id="ho_color" class="business_box">
-                  <i><img src="images/business_icon2.png" alt="#" /></i>
-                  <h3>31</h3>
-                  <p>AGENCIES</p>
-               </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-               <div id="ho_color" class="business_box">
-                  <i><img src="images/business_icon3.png" alt="#" /></i>
-                  <h3>7</h3>
-                  <p>AWARDS</p>
-               </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-               <div id="ho_color" class="business_box">
-                  <i><img src="images/business_icon4.png" alt="#" /></i>
-                  <h3>8</h3>
-                  <p>Supported </p>
-               </div>
-            </div>
-            <div class="col-md-12">
-               <a class="read_more" href="#">Read More</a>
-            </div>
-         </div>
-      </div>
-   </div>
-   <!-- end business  section -->
+   
    <!-- team  section -->
    <div id="team" class="team">
       <div class="container">
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
-                  <h2><strong class="yellow">Team</strong><br>We Have a Professional Team of Business Analysts.</h2>
+                  <h2><strong class="yellow">Team</strong><br>We Have a Professional Team of DEVELOPERS.</h2>
                </div>
             </div>
          </div>
@@ -486,7 +441,7 @@
                               <div class="row">
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team1.png" alt="#" />
+                                       <img src="images/captain.png" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -499,7 +454,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team2.png" alt="#" />
+                                       <img src="images/team_1.png" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -512,7 +467,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6 d_none1">
                                     <div id="ho_bg" class="team_img ">
-                                       <img src="images/team3.png" alt="#" />
+                                       <img src="images/emm.jpg" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
