Home & About US

--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
                   </div>
                   <div class="col-md-4 col-sm-4 ">
                      <!---I'll change the logo "WEBVIEWING" to ANDELE LOGO--->
-                     <a class="logo" href="#"><img src="images/logo.png" alt="#" /></a> 
                   </div>
                   <div class="col-md-4 col-sm-4 d_none">
                      <ul class="conta_icon ">
@@ -161,7 +160,7 @@
             <div class="col-md-5 col-lg-5">
                <div class="ban_img">
                   <!---We'll change the logo to something banking or credit-->
-                  <figure><img src="images/bas_ing.png" alt="#" /></figure>
+                  <figure><img src="images/capito.png" alt="#" /></figure>
                </div>
             </div>
          </div>
@@ -454,7 +453,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team_1.png" alt="#" />
+                                       <img src="images/salami_1.png" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -467,7 +466,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6 d_none1">
                                     <div id="ho_bg" class="team_img ">
-                                       <img src="images/emm.jpg" alt="#" />
+                                       <img src="images/robert_1.png" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -488,7 +487,7 @@
                               <div class="row">
                                  <div class="col-md-4 col-sm-6 d_none1">
                                     <div id="ho_bg" class="team_img ">
-                                       <img src="images/team1.png" alt="#" />
+                                       <img src="images/desmond_1.png" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -501,7 +500,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team2.png" alt="#" />
+                                       <img src="images/emma_1.png" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -514,7 +513,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team3.png" alt="#" />
+                                       <img src="images/captain.png" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -535,7 +534,7 @@
                               <div class="row">
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team1.png" alt="#" />
+                                       <img src="images/desmond_1.png" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -548,7 +547,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6 d_none1">
                                     <div id="ho_bg" class="team_img ">
-                                       <img src="images/team2.png" alt="#" />
+                                       <img src="images/robert_1.png" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -561,7 +560,7 @@
                                  </div>
                                  <div class="col-md-4 col-sm-6">
                                     <div id="ho_bg" class="team_img">
-                                       <img src="images/team3.png" alt="#" />
+                                       <img src="images/salami_1.png" alt="#" />
                                        <div class="ho_socal">
                                           <ul class="social_icont">
                                              <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -595,7 +594,7 @@
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
-                  <h2><strong class="yellow">testimonial</strong><br>What is Syas our clients</h2>
+                  <h2><strong class="yellow">testimonial</strong><br>Feedbacks from our clients</h2>
                </div>
             </div>
          </div>
@@ -613,8 +612,8 @@
                      <div class="row">
                         <div class="col-md-6 offset-md-3">
                            <div class="test_box">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                              <i><img src="images/cos.jpg" alt="#" /></i> <span>Consectetur</span>
+                              <p>An fantastic resource for any risk practitioner, whether as a manual for controlling risks at work or as supplemental reading for exams.</p>
+                              <i><img src="images/client1.jpeg" alt="#" /></i> <span>Modlin Afari</span>
                            </div>
                         </div>
                      </div>
@@ -627,8 +626,8 @@
                      <div class="row">
                         <div class="col-md-6 offset-md-3">
                            <div class="test_box">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                              <i><img src="images/cos.jpg" alt="#" /></i> <span>Consectetur</span>
+                              <p>An excellent companion for any risk practitioner either as a guide for managing risks in the office or a companion as additional reading for examination</p>
+                              <i><img src="images/client2.jpeg" alt="#" /></i> <span>Lisa Shika</span>
                            </div>
                         </div>
                      </div>
@@ -641,8 +640,8 @@
                      <div class="row">
                         <div class="col-md-6 offset-md-3">
                            <div class="test_box">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                              <i><img src="images/cos.jpg" alt="#" /></i> <span>Consectetur</span>
+                              <p>Excellent as a reference for risk management in the workplace or as supplemental reading for exams, this book is a great companion for any risk practitioner.</p>
+                              <i><img src="images/cos.jpg" alt="#" /></i> <span>Samuel Huston</span>
                            </div>
                         </div>
                      </div>
@@ -701,16 +700,15 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12">
-                  <a class="logo2" href="#"><img src="images/loogo2.png" alt="#" /></a>
                </div>
                <div class="col-lg-5 col-md-6 col-sm-6">
                   <h3>Contact Us</h3>
                   <ul class="location_icon">
-                     <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> London 145
-                        <br> United Kingdom
+                     <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a>Accra
+                        <br> Tema
                      </li>
-                     <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com<br> demo@gmail.com</li>
-                     <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+01 1234567890<br>+01 1234567889</li>
+                     <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>salamigideon01@gmail.com<br> baafik@gmail.com</li>
+                     <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+233 551298222<br>+233 559846211</li>
                   </ul>
                   <ul class="social_icon">
                      <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -736,14 +734,14 @@
                <div class="col-lg-2 col-md-6 col-sm-6">
                   <h3>Recent Post</h3>
                   <ul class="link_icon">
-                     <li> <a href="#"> Participate in staff </a></li>
+                     <li> <a href="#"> Join US </a></li>
                      <li>
                         <a href="#">
                            meetings manage
                      </li>
                      <li> <a href="#"> dedicated to </a></li>
-                     <li> <a href="#"> marketing</a></li>
-                     <li> <a href="#"> November 25, 2019</a></li>
+                     <li> <a href="#"> Blockchain</a></li>
+                     <li> <a href="#"> November, 2022</a></li>
                   </ul>
                </div>
                <div class="col-lg-3 col-md-6 col-sm-6">
@@ -765,7 +763,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-md-12">
-                     <p>© 2019 All Rights Reserved.<a href="https://html.design/"> Free html Templates</a></p>
+                     <p>© 2022 All Rights Reserved.<a href="https://andele.agsi-gh.com/"> ANDELE</a></p>
                   </div>
                </div>
             </div>
